# robotics_test_task

./: CMakeLists.txt  README.md  main.cpp
